--- a/AUTHORS
+++ b/AUTHORS
@@ -2,7 +2,7 @@
 Designers
 =========
 
-aegis256                               Hongjun Wu
+aegis                                  Hongjun Wu
                                        Bart Preneel
 
 argon2                                 Alex Biryukov
@@ -48,8 +48,8 @@ siphash                                Jean-Philippe Aumasson
 Implementors
 ============
 
-crypto_aead/aegis256                   Hongjun Wu
-                                       Bart Preneel
+crypto_aead/aegis128l                  Hongjun Wu
+crypto_aead/aegis256                   Bart Preneel
                                        Adrien Gallouet
                                        Frank Denis
 
