--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 * Version 1.0.20-stable
  - The Fil-C compiler is supported out of the box
+ - The CompCert compiler is supported out of the box
  - MSVC 2026 (Visual Studio 2026) is now supported
+ - Zig builds now support FreeBSD targets
  - Performance of AES256-GCM and AEGIS on ARM has been improved
 with some compilers
  - Android binaries have been added to the NuGet package
