Brad Barden (@IAMB) wrote bindings for Perl

--- a/THANKS
+++ b/THANKS
@@ -32,6 +32,7 @@ Alexander Morris (@alexpmorris)
 Amit Murthy (@amitmurthy)
 Andrew Bennett (@potatosalad)
 Andrew Lambert (@charonn0)
+Brad Barden (@IAMB)
 Bruce Mitchener (@waywardmonkeys)
 Bruno Oliveira (@abstractj)
 Caolan McMahon (@caolan)
