--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 * Version 1.0.21-stable
+ - Performance: SHA3 (Keccak1600) now leverages ARM SHA3 instructions when
+available on ARM platforms.
  - Export missing crypto_ipcrypt_nd_keygen() helper function.
  - Fixed compilation with GCC on aarch64.
  - Libsodium can be directly used as a dependency in a Zig project.
