--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 * Version 1.0.21-stable
+ - JavaScript sumo builds now allow up to 80 MiB memory usage, so that
+`crypto_pwhash` with the interactive settings can be used in pure
+JavaScript, not just WebAssembly.
  - Performance: SHA3 (Keccak1600) now leverages ARM SHA3 instructions when
 available on ARM platforms.
  - Export missing crypto_ipcrypt_nd_keygen() helper function.
