--- a/ChangeLog
+++ b/ChangeLog
@@ -5,7 +5,7 @@ JavaScript, not just WebAssembly.
  - Performance: SHA3 (Keccak1600) now leverages ARM SHA3 instructions when
 available on ARM platforms.
  - Export missing crypto_ipcrypt_nd_keygen() helper function.
- - Fixed compilation with GCC on aarch64.
+ - Fixed compilation with GCC on aarch64 and gcc 4.1
  - Libsodium can be directly used as a dependency in a Zig project.
 
 * Version 1.0.21
