--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 * Version 1.0.21-stable
  - Performance: SHA3 (Keccak1600) now leverages ARM SHA3 instructions when
 available on ARM platforms.
+ - Performance: Argon2 has an optimized implementation for arch64 and
+webassembly/SIMD.
  - Export missing crypto_ipcrypt_nd_keygen() helper function.
  - Fixed compilation with GCC on aarch64 and gcc 4.1
  - Libsodium can be directly used as a dependency in a Zig project.
