--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,24 @@
 * Version 1.0.21-stable
+ - Performance: NEON optimizations for Argon2 on ARM platforms.
  - Performance: SHA3 (Keccak1600) now leverages ARM SHA3 instructions when
 available on ARM platforms.
- - Performance: Argon2 has an optimized implementation for arch64 and
-webassembly/SIMD.
- - Export missing crypto_ipcrypt_nd_keygen() helper function.
- - Fixed compilation with GCC on aarch64 and gcc 4.1
+ - Performance: WebAssembly SIMD implementations of Argon2 have been added.
+ - Emscripten: LTO is now disabled. With Emscripten 4, LTO produced
+WebAssembly modules with functions that ran significantly slower than
+without it.
+ - Emscripten: a new option allows compilation with SIMD support.
+ - JavaScript sumo builds now allow up to 80 MiB memory usage, so that
+`crypto_pwhash` with the interactive settings can be used in pure
+JavaScript, not just WebAssembly.
+ - XOF state alignment has been relaxed.
+ - `crypto_core_keccak1600_state` has been added.
+ - Export missing `crypto_ipcrypt_nd_keygen()` helper function.
+ - apple-xcframework: headers are now in a Clibsodium subdirectory
+to prevent module.modulemap collisions with other xcframeworks.
+ - Fixed compilation with GCC on aarch64 and gcc 4.x.
+ - On aarch64, aes256-gcm is now enabled even when not using clang.
+ - Added compatibility with Visual Studio 2026 when toolsets do not
+define PlatformToolsetVersion.
  - Libsodium can be directly used as a dependency in a Zig project.
 
 * Version 1.0.21
